[package]
name = "zenity"
version = "1.2.0"
authors = ["Arteii <ben.arteii@proton.me>"]
edition = "2021"
license-file = "LICENSE.md"
readme = "README.md"
categories = ["command-line-utilities", "command-line-interface"]


description = "100+ Cool Animations and Support for Multiple Animations at Once (Yet Another Spinner Lib)"
repository = "https://github.com/Arteiii/zenity"
keywords = ["console", "animations", "cli", "spinner", "loading"]
homepage = "https://arteiii.github.io"


exclude = [
    "examples/**"
]


[dependencies]
crossterm = "0.27.0"
utils_arteii_rs = "0.1.0"
rand = "0.9.0-alpha.1"

[dev-dependencies]
unicode-icons = { version = "2.1.2", features = ["symbols"]  }
