[package]
name = "zenity"
version = "1.3.2"
authors = ["Arteii <ben.arteii@proton.me>"]
edition = "2021"
license-file = "LICENSE.md"
readme = "README.md"
categories = ["command-line-utilities", "command-line-interface"]


description = "100+ spinner animations and Progress Bars and Support for Multiple Animations at Once"
repository = "https://github.com/Arteiii/zenity"
keywords = ["console", "animations", "cli", "spinner", "loading"]
homepage = "https://arteiii.github.io"


exclude = [
    ".github/**",
    "images/**",
    "examples/**",
    "Cargo.lock",
]

[lib]
name = "zenity"
path = "src/lib.rs"
test = true



[dependencies]
crossterm = "0.27.0"
rand = "0.9.0-alpha.1"
supports-color = "3.0.0"

[dev-dependencies]
unicode-icons = { version = "2.1.2", default-features = false, features = ["symbols"]  }
