[package]
name = "zenity"
version = "3.6.1"
authors = ["Arteii <ben.arteii@proton.me>"]
edition = "2021"
license-file = "LICENSE.md"
readme = "README.md"
categories = ["command-line-utilities", "command-line-interface"]
description = "100+ spinner animations and Progress Bars and Support for Multiple Animations at Once"
repository = "https://github.com/Arteiii/zenity"
keywords = ["console", "animations", "cli", "spinner", "loading"]
homepage = "https://arteiii.github.io"


include = [
    "Cargo.toml",
    "LICENSE.md",
    "src/**/*",
]


[lib]
name = "zenity"
path = "src/lib.rs"
test = true


[features]
default = ["spinner", "progressbar", "menu"]

spinner = []
progressbar = []
menu = ["spinner"]


[dependencies]
crossterm = "0.27.0"
supports-color = "3.0.0"
lazy_static = "1.4.0"
regex = "1.10.4"
chrono = "0.4.38"


[dev-dependencies]
rand = "0.8.5"
unicode-icons = { version = "2.1.2", default-features = false, features = ["symbols"] }
